# Amharic-Sentiment-Analysis

./: .gitignore  CNN-BiLSTM.ipynb  Dockerfile  README.md  pyproject.toml  requirements-api.txt  requirements.txt  setup.py
amharic_sentiment/: __init__.py  cli.py
amharic_sentiment/data/: __init__.py  dataset.py
amharic_sentiment/evaluation/: __init__.py  metrics.py  visualize.py
amharic_sentiment/models/: bilstm.py  cnn.py  gru.py
amharic_sentiment/preprocessing/: __init__.py  normalizer.py
amharic_sentiment/pytorch/: __init__.py  dataset.py
amharic_sentiment/pytorch/models/: __init__.py  base.py  bilstm.py  cnn.py  cnn_bilstm.py  gru.py
amharic_sentiment/pytorch/training/: __init__.py  trainer.py
amharic_sentiment/training/: callbacks.py  trainer.py
amharic_sentiment/transformers/: __init__.py  dataset.py  models.py  trainer.py
amharic_sentiment/utils/: config.py  logger.py
api/: __init__.py  main.py  model_service.py  schemas.py
configs/: cnn_bilstm.yaml  default.yaml  pytorch.yaml  transformer.yaml
dataset/: all.txt  negative comment.txt  postive comment.txt
docker/: docker-compose.yml  nginx.conf
notebooks/: 01_getting_started.ipynb
notebooks/legacy/: CNN model.ipynb  GRU model.ipynb  bidirectional_model.ipynb  word2vectry-Copy2.ipynb
scripts/: export_model.py  run_api.py  test_api.py  train.py
src/amharic_sentiment/data/: data_loader.py
src/amharic_sentiment/models/: __init__.py  base.py  cnn_bilstm.py
src/amharic_sentiment/preprocessing/: pipeline.py  text_cleaner.py
src/amharic_sentiment/training/: __init__.py
src/amharic_sentiment/utils/: __init__.py
